--- a/src/style.scss
+++ b/src/style.scss
@@ -28,7 +28,26 @@ html,
 body {
   height: 100%;
   width: 100%;
-  margin: 0;}
+  margin: 0;
+  @media screen and (max-width: $tablet) {
+    height: 100%;
+    width: 100%;
+  }
+  @media screen and (max-width: $phone) {
+    height: 100%;
+    width: 100%;
+  }
+  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
+    height: 100%;
+    width: 100%;}
+  @media screen and (min-width: $tablet) and (max-width: $desktopSmall) {
+    height: 100%;
+    width: 100%;
+      }
+      @media screen and (min-width: $desktopSmall) and (max-width: $desktopLarge) {
+        height: 100%;
+        width: 100%;
+          }}
 
 #page1 {
   background: url('https://images.unsplash.com/photo-1523800503107-5bc3ba2a6f81?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80');
@@ -93,11 +112,11 @@ body {
             font-size: 24px;
             margin-left: 40px;
           }
-          @media screen and (max-width: $desktopSmall) {
+          @media screen and (min-width: $tablet) and (max-width: $desktopSmall) {
             font-size: 24px;
             margin-left: 80px;
           }
-          @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) and (max-width: $phoneLandscape) {
+          @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
             font-size: 30px;
             margin-left: 40px;
         }}
@@ -136,7 +155,7 @@ body {
           @media screen and (max-width: $phone) {
             font-size: 14px;
           }
-          @media screen and (max-width: $desktopSmall) {
+          @media screen and (min-width: $tablet) and (max-width: $desktopSmall) {
             font-size: 20px;
           }
         }
@@ -247,7 +266,7 @@ body {
   @media screen and (max-width: $phone) {
     justify-content: center;
   }
-  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) and (max-width: $phoneLandscape) {
+  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
     display: flex;
     justify-content: center;
 }
@@ -279,10 +298,10 @@ body {
       justify-content: center;
       align-items: center;
     }
-    @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) and (max-width: $phoneLandscape) {
+    @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
           margin-top: -5px;
         font-size: 28px;}
-        @media screen and (max-width: $desktopSmall) {
+        @media screen and (min-width: $tablet) and (max-width: $desktopSmall) {
           font-size: 23px;
             }
   }
@@ -323,7 +342,7 @@ body {
     display: flex;
     justify-content: center;
   }
-  @media screen and (max-width: $desktopSmall) {
+  @media screen and (min-width: $tablet) and (max-width: $desktopSmall) {
     font-size: 18px;
       }
 
@@ -338,7 +357,7 @@ display: none;
   display: block;
   
 }
-@media only screen and (orientation: landscape) and (max-width: $phoneLandscape) and (max-width: $phoneLandscape) {
+@media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
   display: block;}
 }
 .longAbout {
@@ -348,7 +367,7 @@ display: none;
   @media (max-width: $phone) {
     display: none;
   }
-  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) and (max-width: $phoneLandscape) {
+  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
     display: none;}
 }
 
@@ -379,8 +398,10 @@ display: none;
   }
   @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
     height: 850px;}
-  @media screen and (max-width: $desktopSmall) {
+  @media screen and (min-width: $tablet) and (max-width: $desktopSmall) {
       height: 930px;}
+      @media screen and (min-width: $desktopSmall) and (max-width: $desktopLarge) {
+        height: 900px;}
     
 }
 
@@ -422,11 +443,16 @@ margin-top: 30px;}
   display: flex;
   flex-wrap: wrap;
 margin-top: 50px;}
-@media screen and (max-width: $desktopSmall) {
+@media screen and (min-width: $tablet) and (max-width: $desktopSmall) {
   display: flex;
   flex-wrap: wrap;
   margin-top: -40px;
     }
+    @media screen and (min-width: $desktopSmall) and (max-width: $desktopLarge) {
+      display: flex;
+  flex-wrap: wrap;
+  margin-top: -20px;
+        }
 }
 
 .projectcontainer {
@@ -450,8 +476,10 @@ margin-top: 50px;}
   width: 250px;
 margin-left: 12px;
 margin-top: 30px;}
-@media screen and (max-width: $desktopSmall) {
+@media screen and (min-width: $tablet) and (max-width: $desktopSmall) {
   margin-top: 60px;}
+  @media screen and (min-width: $desktopSmall) and (max-width: $desktopLarge) {
+    margin-top: 30px;}
 }
     
     .projTitles{
@@ -846,10 +874,12 @@ color: $color-light-black;
   @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
     font-size: 13px;
   width: 350px;}
-  @media screen and (max-width: $desktopSmall) {
+  @media screen and (min-width: $tablet) and (max-width: $desktopSmall) {
     font-size: 13px;
     width: 300px;
       }
+      @media screen and (min-width: $desktopSmall) and (max-width: $desktopLarge) {
+        width: 500px;}
   
 }
 .aboutLinks{
@@ -882,7 +912,7 @@ box-shadow: 0px 0px 10px $color-light-black;
 @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
   width: 250px;
 height: 350px;}
-@media screen and (max-width: $desktopSmall) {
+@media screen and (min-width: $tablet) and (max-width: $desktopSmall) {
   height: 400px;
   width: 250px;
     }
