--- a/src/style.css
+++ b/src/style.css
@@ -415,33 +415,6 @@ body {
   background: #000000;
 }
 
-@media screen and (max-width: 600px) {
-  #nav-list {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-
-@media screen and (max-width: 415px) {
-  #nav-list {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-
-@media only screen and (orientation: landscape) and (max-width: 844px) {
-  #nav-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-
 #navbar-brand {
   font-family: "Raleway", sans-serif;
   -webkit-transition: color 1s;
@@ -517,6 +490,13 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media screen and (min-width: 320px) {
+  #nav-dropdown {
+    background-color: black;
+    margin: 0;
+  }
 }
 
 .navPoint {
@@ -1076,31 +1056,32 @@ body {
   border: 2px solid whitesmoke;
 }
 
-.socialMediaAppPics {
-  height: 200px;
-  width: 300px;
-}
-
 #page3 {
   padding-top: 70px;
   height: 100vh;
   background-position: center center;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 320px) {
   #page3 {
-    height: 1200px;
+    height: 1700px;
   }
 }
 
-@media screen and (max-width: 415px) {
+@media screen and (min-width: 600px) {
+  #page3 {
+    height: 700px;
+  }
+}
+
+@media screen and (min-width: 415px) {
   #page3 {
     background-size: 800px;
     background-position: left;
   }
 }
 
-@media only screen and (orientation: landscape) and (max-width: 844px) {
+@media only screen and (orientation: landscape) and (mix-width: 844px) {
   #page3 {
     height: 700px;
   }
@@ -1134,18 +1115,23 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-top: 100px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 50px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 600px) {
   #page3Container {
-    margin-top: -30px;
+    margin-top: 50px;
+    height: 500px;
   }
 }
 
-@media screen and (max-width: 415px) {
+@media screen and (min-width: 415px) {
   #page3Container {
-    margin-top: -30px;
+    margin-top: 50px;
+    height: 500px;
   }
 }
 
@@ -1157,25 +1143,41 @@ body {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 600px) {
   #container1 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    height: 200px;
   }
 }
 
-@media screen and (max-width: 415px) {
+@media screen and (min-width: 415px) {
   #container1 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    height: 300px;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  #container1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    height: 300px;
   }
 }
 
@@ -1188,7 +1190,7 @@ body {
           justify-content: space-evenly;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 600px) {
   #container2 {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1196,10 +1198,23 @@ body {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     margin-top: 225px;
+    height: 500px;
   }
 }
 
-@media screen and (max-width: 415px) {
+@media screen and (min-width: 415px) {
+  #container2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: 225px;
+    height: 500px;
+  }
+}
+
+@media screen and (min-width: 320px) {
   #container2 {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1297,6 +1312,18 @@ body {
   margin-top: 10px;
 }
 
+#nest {
+  height: 250px;
+  width: 130px;
+  margin-top: 10px;
+}
+
+#post {
+  height: 200px;
+  width: 130px;
+  margin-top: 20px;
+}
+
 #reactTitle {
   margin-top: -20px;
 }
@@ -1329,6 +1356,14 @@ body {
   margin-top: 10px;
 }
 
+#nestTitle {
+  margin-top: 10px;
+}
+
+#postTitle {
+  margin-top: 10px;
+}
+
 #page4 {
   width: 100%;
   height: 100vh;
@@ -1339,6 +1374,12 @@ body {
 @media only screen and (orientation: landscape) and (max-width: 844px) {
   #page4 {
     height: 700px;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  #page4 {
+    height: 730px;
   }
 }
 
@@ -1395,7 +1436,15 @@ body {
   font-size: 16px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 320px) {
+  #aboutText {
+    font-size: 13px;
+    width: 280px;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 600px) {
   #aboutText {
     font-size: 13px;
     width: 350px;
@@ -1403,7 +1452,7 @@ body {
   }
 }
 
-@media screen and (max-width: 415px) {
+@media screen and (min-width: 415px) {
   #aboutText {
     font-size: 13px;
     width: 350px;
@@ -1494,13 +1543,19 @@ body {
   background-position: center center;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 320px) {
+  #page5 {
+    height: 650px;
+  }
+}
+
+@media screen and (min-width: 600px) {
   #page5 {
     background-position: left;
   }
 }
 
-@media screen and (max-width: 415px) {
+@media screen and (min-width: 415px) {
   #page5 {
     background-position: left;
   }
@@ -1545,17 +1600,24 @@ body {
           box-shadow: 0px 0px 30px #242526;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 320px) {
   #contactContainer {
-    width: 300px;
-    height: 515px;
+    font-size: 13px;
+    width: 280px;
   }
 }
 
-@media screen and (max-width: 415px) {
+@media screen and (min-width: 600px) {
   #contactContainer {
     width: 300px;
-    height: 550px;
+    height: 500px;
+  }
+}
+
+@media screen and (min-width: 415px) {
+  #contactContainer {
+    width: 300px;
+    height: 500px;
   }
 }
 
