--- a/src/style.scss
+++ b/src/style.scss
@@ -663,17 +663,19 @@ body {
   height: 100vh;
   background-position: center center;
   @media screen and (min-width: $responsive) {
-    height: 1700px;
+    height: 1800px;
   }
   @media screen and (min-width: $tablet) {
-    height: 700px;
+    height: 1500px;
   }
   @media screen and (min-width: $phone) {
-    background-size: 800px;
-    background-position: left;
+    height: 1800px;
   }
-  @media only screen and (orientation: landscape) and (mix-width: $phoneLandscape) {
-    height: 700px;
+  @media only screen and (orientation: landscape) and (min-width: $phoneLandscape) {
+    height: 1300px;
+  }
+  @media only screen and (min-width: $desktopSmall) {
+    height: 800px;
   }
 }
 #page3title {
@@ -696,7 +698,7 @@ body {
 #page3Container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: space-around;
   margin-top: 50px;
   @media screen and (min-width: $tablet) {
     margin-top: 50px;
@@ -708,45 +710,39 @@ body {
   }
 }
 #container1 {
-  height: 300px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
+  margin-top: 30px;
   @media screen and (min-width: $tablet) {
     display: flex;
     flex-wrap: wrap;
-    height: 200px;
+    height: auto;
   }
   @media screen and (min-width: $phone) {
     display: flex;
     flex-wrap: wrap;
-    height: 300px;
+    height: auto;
   }
   @media screen and (min-width: $responsive) {
     display: flex;
     flex-wrap: wrap;
-    height: 300px;
+    height: auto;
   }
 }
 #container2 {
   display: flex;
-  justify-content: space-evenly;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  height: 500px;
   @media screen and (min-width: $tablet) {
-    display: flex;
-    flex-wrap: wrap;
     margin-top: 225px;
-    height: 500px;
   }
   @media screen and (min-width: $phone) {
-    display: flex;
-    flex-wrap: wrap;
     margin-top: 225px;
-    height: 500px;
   }
   @media screen and (min-width: $responsive) {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 225px;
+    margin-top: 100px;
   }
 }
 .skillContainers {
@@ -763,12 +759,17 @@ body {
     transform: scale(1.5);
     color: $color-light-black;
   }
-  @media screen and (max-width: $tablet) {
+  @media screen and (min-width: $tablet) {
     height: 250px;
+    width: 200px;
   }
-  @media screen and (max-width: $phone) {
+  @media screen and (min-width: $phone) {
     height: 250px;
+    width: 200px;
   }
+  @media screen and (min-width: $responsive) {
+    height: 250px;
+    width: 150px;}
 }
 #react {
   height: 200px;
@@ -810,12 +811,12 @@ body {
   margin-top: 10px;
 }
 #nest {
-  height: 250px;
+  height: 150px;
   width: 130px;
   margin-top: 10px;
 }
 #post {
-    height: 200px;
+    height: 130px;
     width: 130px;
     margin-top: 20px;
   }
@@ -845,7 +846,7 @@ body {
   margin-top: 10px;
 }
 #nestTitle {
-  margin-top: 10px;
+  margin-top: 5px;
 }
 #postTitle {
   margin-top: 10px;
