--- a/src/style.css
+++ b/src/style.css
@@ -407,12 +407,13 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  position: fixed;
+  position: fixed !important;
   top: 0;
   left: 0;
   width: 100%;
   height: 60px;
-  background: #000000;
+  background: #000000 !important;
+  z-index: 1;
 }
 
 #navbar-brand {
