--- a/src/style.css
+++ b/src/style.css
@@ -1390,7 +1390,6 @@ body {
 
 #page4 {
   width: 100%;
-  height: 100vh;
   background-color: #d1cfcf;
   padding-top: 70px;
 }
@@ -1403,7 +1402,13 @@ body {
 
 @media screen and (min-width: 320px) {
   #page4 {
-    height: 800px;
+    height: 940px;
+  }
+}
+
+@media screen and (min-width: 844px) {
+  #page4 {
+    height: 760px;
   }
 }
 
